# QuietDiff

./: README.md  pyproject.toml
src/quietdiff/: cli.py  diff.py  io.py  report.py  utils.py
templates/: report.html
tests/: test_basic.py
